--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "react": "17.0.2",
     "react-datepicker": "^4.8.0",
     "react-dom": "17.0.2",
-    "react-icons": "^4.4.0"
+    "react-icons": "^4.4.0",
+    "sequelize": "^6.21.3",
+    "sqlite3": "^5.0.9"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.2",
