--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "classnames": "^2.3.1",
     "next": "12.0.9",
+    "pg": "^8.7.3",
+    "pg-hstore": "^2.3.4",
     "react": "17.0.2",
     "react-datepicker": "^4.8.0",
     "react-dom": "17.0.2",
